sites/navy/clusters/dal-navy-core-1/wave-5/overlays/forgejo/ingress-ssh.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-route-ssh
  annotations:
    kubernetes.io/ingress.class: ingress-private

spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-ssh
          port: 22
